quarto Basics book: improving structure

--- a/docs/basic/Programming_Basics/intro.qmd
+++ b/docs/basic/Programming_Basics/intro.qmd
@@ -1,32 +1,28 @@
 # Introduction
 
-Dit is een verzameling van programmeerassignments die als training gebruikt
-kunnen worden. Concepten die hierin aan bod komen: 
-
+This book contains information about basic concepts of programming, like
 
 + Variable
++ Type int, string, double, bool
++ Assignment statement
 + Conditional statement
 + Loop
 + Method
-+ Parameters bij Methods
-+ Returnvalues bij Methods
++ Parameters for Methods
++ Returnvalues of Methods
 + List
 + Array
-+ Enum
-+ Type int, string, double, bool
 
-Ook vaardigheden als:
+and competences like 
 
-+ Leesbaarheid / Onderhoudbaarheid
-+ Algoritmiek
-+ Feedback vragen en dat verwerken
-+ Professioneel handelen
++ Readability / Maintainability
++ Algorithms
++ Feedback: ask for it, follow it up
++ Professionel behavior
 
 ## Intro personas
 
-In den beginne... had nog niemand programmeerervaring... Op het moment dat je aan dit semester begint heb je misschien al ergens ervaring opgedaan, of wellicht niet. Kortom: we zijn allen gelijk in dat we allemaal uniek zijn! 
-
-Als je al ervaring hebt is het jammer helemaal aan het begin te beginnen. Vandaar dat we verschillende persona's beschreven hebben. Bepaal welke het best bij je past en kijk eens wat er over jouw persona gezegd wordt. 
+In den beginne... had nog niemand programmeerervaring... Op het moment dat je aan dit semester begint heb je misschien al ergens ervaring opgedaan, of wellicht niet. Als je al ervaring hebt is het jammer helemaal aan het begin te beginnen. Vandaar dat we verschillende persona's beschreven hebben. Bepaal welke het best bij je past en kijk eens wat er over jouw persona gezegd wordt. 
 
 
 | [Bas (of Barbara)<br /> the Absolute Beginner](Bas)  | [Intermediate Inge (of Ivo)](Inge) | [OOP-experienced<br /> Olaf (of Olivia)](Olaf) |
