--- a/docs/basic/lussen/training_Worpengenerator.qmd
+++ b/docs/basic/lussen/training_Worpengenerator.qmd
@@ -9,6 +9,7 @@ Het programma dat je aan het eind van deze opdracht hebt gemaakt is ziet er als 
 <img src="figures/Worpengenerator-ui.png" alt="ui" width="300" />
 
 ## Deel 1
+
 Maak een nieuw C# Windows Forms-project aan. Maak een user interface welke er als hieronder uitziet (dit is een vereenvoudigde vorm van het eindresultaat, we gaan nog even uit van dobbelstenen met 6 ogen). De kaders (Instellingen en Resultaten) zijn **GroupBox** objecten. Hiermee kun je een aantal GUI-objecten die bij elkaar horen als groepje bij elkaar zetten en later, mocht het nodig zijn, bijv. als geheel verplaatsen. Het is het handigste om de **GroupBox**\-en eerst aan te maken zodat je de andere objecten hier op kunt zetten. Het witte uitvoer vlak is een **ListBox**.
 - Geef de Button, NumericUpDown, ListBox, Labels en GroupBox\-en duidelijke namen. 
 - Zorg dat het aantal worpen dat gekozen mag worden minimaal 1 is en maximaal 1000. 
@@ -18,7 +19,7 @@ Maak een nieuw C# Windows Forms-project aan. Maak een user interface welke er al
 
 <img src="figures/Worpengenerator-ui-deel-1.png" alt="ui" width="300" />
 
-### Tips
+## Tips
 
 - Begin klein door eerst maar één worp uit te voeren en te tonen, dan kun je de code daarna gemakkelijker uitbreiden door een herhaling (for lus of while lus) toe te voegen.
 - Aan een ListBox kun je een regel toevoegen door gebruik te maken van de methode Items.Add(). Dus voor de ListBox met de naam mijnListBox gaat het toevoegen van het getal tien zo: mijnListBox.Items.Add(10);
@@ -27,13 +28,15 @@ Maak een nieuw C# Windows Forms-project aan. Maak een user interface welke er al
 
 
 ## Deel 2
+
 Breid de user interface uit met twee **Label** objecten zoals hieronder. De ene bevat de tekst “Totaal aantal ogen:”, de andere bevat de standaard waarde “0” en zal straks het totaal aantal ogen voor de worp bevatten. Geef de **Label** objecten duidelijke namen.
 
 <img src="figures/Worpengenerator-ui-deel-2.png" alt="ui" width="300" />
 
 Zorg dat in de EventHandler van de Button de code wordt toegevoegd waarmee het totaal aantal gegooide ogen wordt bijgehouden. Maak hiervoor gebruik van een “totaalOgen” variabele van het type int.
 
-### Tips
+## Tips
+
 - Als je een variabele binnen een for of while lus aanmaakt dan wordt deze tijdens elke herhaling aangemaakt en op het einde van de herhaling weer opgeruimd (dus voor iedere worp van iedere dobbelsteen wordt de variabele aangemaakt en weer weggegooid). Als je een variabele aanmaakt buiten, dus vlak voor een for of while lus, dan blijft deze variabele gedurende de uitvoering van de gehele for of while lus bestaan en te benaderen vanuit de for of while lus.
 - Als je totaalOgen variabele na het uitvoeren van de for of while lus altijd precies de waarde heeft van de laatste worp, dan heb je heel waarschijnlijk één van de volgende fouten gemaakt:
 	- Je hoogt de variabele totaalOgen niet op maar overschrijft deze met het aantal gegooide ogen.
@@ -41,6 +44,7 @@ Zorg dat in de EventHandler van de Button de code wordt toegevoegd waarmee het t
 - Test of het totaal aantal ogen juist wordt opgeteld door dit zelf na te tellen voor een aantal verschillende worpen, met telkens een andere hoeveelheid dobbelstenen.
 
 ## Deel 3
+
 Breid de user interface uit met een Label en een NumericUpDown zoals onderstaande afbeelding. Op het Label komt de tekst “ogen op dobbelsteen”, de NumericUpDown krijgt als minimumwaarde 2 en als maximumwaarde 100. De standaardwaarde komt op 6 te staan (dit is immers de meest voorkomende hoeveelheid ogen op een dobbelsteen).
 
 <img src="figures/Worpengenerator-ui-deel-3.png" alt="ui" width="300" />
@@ -48,9 +52,11 @@ Breid de user interface uit met een Label en een NumericUpDown zoals onderstaand
 Zorg dat in plaats van een waarde van 1 t/m 6 nu een waarde van 1 t/m de waarde in de nieuwe NumericUpDown wordt gegenereerd.
 
 ## Uitbreidingen
+
 - Niveau ** - Voeg twee extra Label objecten toe onder het totaal aantal ogen en houd hierin de "Hoogte worp tot nu toe" in bij. Doe hetzelfde voor het laagste aantal worpen tot nu toe.
 
 ## Checklist
+
 Als je de opdracht op de juiste manier hebt uitgevoerd heb je voldaan aan onderstaande punten: 
 - De NumericUpDown aantal-worpen heeft een minimumwaarde van 1 en een maximumwaarde van 1000. 
 - De NumericUpDown aantal-ogen-op-dobbelsteen heeft een minimumwaarde van 2, een maximumwaarde van 100 en een standaard waarde van 6. 
