--- a/docs/basic/string_methoden/naslag_StringMethods.qmd
+++ b/docs/basic/string_methoden/naslag_StringMethods.qmd
@@ -1,4 +1,4 @@
-# Naslag basiskennis: String bewerkingen (String methods)
+# Basiskennis String bewerkingen (String methods)
 
 Hieronder worden enkele veelgebruikte String functies gedemonstreerd en kort toegelicht.
 Dit document is geschreven als een *naslagwerk*,
