--- a/docs/basic/var/naslag_Variable.qmd
+++ b/docs/basic/var/naslag_Variable.qmd
@@ -1,7 +1,5 @@
-# Naslag basiskennis: Variables
+# Basiskennis Variables
 
-Dit hoofdstuk is geschreven als een *naslagwerk*,
-het is niet specifiek geschreven om uit te leren hoe je met variabelen programmeert.
 
 ## Typen variabelen
 
@@ -27,6 +25,7 @@ een waarde kan worden  opgeslagen. De veelgebruikte typen variabelen zijn:
 
 
 ## Variabele aanmaken (declareren)
+
 Variabelen kunnen op verschillende manieren worden aangemaakt,
 enkele voorbeelden staan hier-onder. Merk op dat:
 - Je de variabele naam zelf kunt kiezen
@@ -60,6 +59,7 @@ wil dat ze een specifieke waarde hebben deze waarde expliciet
 toe te kennen.
 
 ## Waarde aan variabele geven (toekenning of assignment)
+
 
 Als een variabele eenmaal is aangemaakt kan hier een waarde aan worden toegekend.
 Merk op:
@@ -123,27 +123,32 @@ s = textBox1.Text;
     // als waarde de tekst die in de
     // TextBox genaamd "textBox1" staat.
 ```
+
 Dit werkt omdat de `Text property` van de *TextBox* ook
 van het `type` `string` is.
 
 ## Variabele aanmaken en direct een waarde geven (declare en initialize)
 
 Variabele met de naam *s* aanmaken en waarde &quot;test&quot; toekennen:
+
 ```cs
 String s = "test";
 ```
 
 Variabele met de naam *i* aanmaken en waarde `10` toekennen:
+
 ```cs
 int i =10;
 ```
 
 Variabele met de naam *d*  aanmaken en waarde `1,52` toekennen:
+
 ```cs
 double d = 1.52;
 ```
 
 Variabele met de naam *b* aanmaken en waarde `true` toekennen:
+
 ```cs
 bool b = true;
 ```
