--- a/docs/basic/var/naslag_Operatoren.qmd
+++ b/docs/basic/var/naslag_Operatoren.qmd
@@ -1,33 +1,40 @@
-# Naslag basiskennis: Int en double bewerkingen (operatoren)
+# Basiskennis integer en double bewerkingen (operatoren)
 
 Onderstaande bewerkingen zijn zowel op `int` `typen` als
 op `double` typen van toepassing:
+
 ```cs
 int k;
 k = 5 + 10;
 ```
 Aan variabele *k* wordt in de laatste regel code de waarde `15` toegekend
 omdat het `+`teken de waarden `5` en `10` bij elkaar optelt.
+
 ```cs
 int i = 2;
 int k;
 k = i + 1;
 ```
+
 Aan variabele *k* wordt in de laatste regel code de waarde 3 toegekend
 omdat het `+`teken de waarden `2` en `1` bij elkaar optelt.
+
 ```cs
 int i = -8;
 int k;
 k = 1 + i;
 ```
+
 Aan variabele *k* wordt in de laatste regel code de waarde `-7` toegekend
 omdat het `+`teken de waarden `1` en `-8` bij elkaar optelt.
+
 ```cs
 int i = 5;
 int j = 3;
 int k;
 k = i + j;
 ```
+
 Aan variabele *k* wordt in de laatste regel code de waarde `8` toegekend
 omdat het `+`teken de waarden uit *i* en *j* bij elkaar op telt.
 Bij bovenstaande voorbeelden kan de operator (het `+`teken)
