quarto book: improve structure

--- a/docs/basic/var/training_GoeroeCalc.qmd
+++ b/docs/basic/var/training_GoeroeCalc.qmd
@@ -1,4 +1,4 @@
-# Training Goeroe-calc: variabelen, bewerkingen en conversies: Een Console app(lication)
+# Training Goeroe-calc: variabelen, bewerkingen en conversies: Console 
 
 (Concepten: int, double, bewerkingen en conversies)
 
