--- a/docs/basic/var/training_GoeroeCalc.qmd
+++ b/docs/basic/var/training_GoeroeCalc.qmd
@@ -95,3 +95,20 @@ Om het echt goed te leren is het goed om uitbreidingen op de opdrachten te maken
 + Als de uitkomst onder de nul is laat je dit duidelijk zien, bijvoorbeeld door
   er achter de tekst 'LET OP: is negatief' te zetten.
 + Breidt de calculator uit met een functie voor delen. Zorg ervoor dat delen door 0 netjes wordt afgevangen en laat een nette foutmelding zien.
++ De calculator moet werken met gebroken getallen. Dus 3.14 maal 2.0 moet 6.28 opleveren.
+
+## Alternatief: Goeroe-calc in WinForms
+
+Maak de user interface van de calculator waarbij je minimaal twee Textboxen, een Label en twee Buttons (een voor optellen en een voor vermenigvuldigen) hebt.
+
+![](figures/goeroecalc.png "goeroe-calc")
+
+De gebruiker kan gehele getallen (integers) invullen in de tekstboxen. Programmeer nu de functionaliteit van de calculator conform de volgende specificatie:
+
++ Als de gebruiker op de knop Plus klikt dan worden de twee ingevoerde getallen bij elkaar opgeteld en in een label getoond als uitkomst.
++ Als de gebruiker op de knop Vermenigvuldig klikt dan worden de twee ingevoerde getallen met elkaar vermenigvuldigd en in een label getoond als uitkomst.
+
+Zit je vast? Stel een vraag aan je buurman of -vrouw! Als jullie er samen niet uitkomen vraag je het aan je docent. In het begin kan dit programmeren best moeilijk zijn.
+
+Bespreek deze opdracht met je docent en voer feedback van je docent in in Feedpulse.
+
